--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -4,12 +4,12 @@
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>
-     Poi Info
+    Info
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<!-- <ion-content [fullscreen]="true">
  
     <ion-item>
       <ion-icon name="business"></ion-icon>
@@ -53,12 +53,47 @@
       </ion-button>
     </div>
 
-</ion-content>
+</ion-content> -->
 
 
 
 
+  <img src="{{baseUrl}}{{image}}" class="image_poi">
 
+  <ion-content>
+    <!-- display button -->
+    <ion-button class="button_info" >Info</ion-button>
+    <ion-button class="button_history" (click)="buttonHistory(id)">History</ion-button>
+
+    <!-- display data -->
+    <div *ngIf="checkdata">
+      
+      <div class="name">{{data.name}}</div>
+
+      <div *ngFor="let data of fields;" class="fields">{{data.key}} => {{data.value}}</div>
+
+      <div class="event">Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod</div>
+
+      <div class="coordinate">
+        <ion-input  type="text" name="longitude" class="longitude" value="{{data.poi_longitude}}" disabled></ion-input>
+        <ion-input  type="text" name="latitude" class="latitude" value="{{data.poi_latitude}}" disabled></ion-input>
+      </div>
+   
+      <div>
+        <ion-button (click)="buttonEdit()" class="button_edit">
+          Edit
+        </ion-button>
+        
+        <ion-button (click)="buttonReport(id)" class="button_report">
+          Report 
+        </ion-button>
+      </div>
+  
+
+    </div>
+
+  </ion-content>
+ 
 
 
 
