--- a/src/app/edit/poi-info.html
+++ b/src/app/edit/poi-info.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Poi Info</ion-title>
+    <ion-title>Info</ion-title>
   </ion-toolbar>
 </ion-header>
 
