--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,16 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profile</ion-title>
+    <ion-title>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<!-- <ion-content>
   <ion-card>
     <ion-item>
-      <!-- <ion-img [src]="item.src"></ion-img> -->
       <ion-icon name="person-outline"></ion-icon>
       <ion-label>User Profile</ion-label>
-      <!-- <ion-button fill="outline" slot="end">View</ion-button> -->
     </ion-item>
   
     <ion-card-content>
@@ -33,4 +31,4 @@
  
  
 
-</ion-content>
+</ion-content> -->
