--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,7 +1,7 @@
 .name {
   height: 16px;
   left: -140px;
-  top: 303px;
+  top: 375px;
 
   font-family: Metropolis;
   font-style: normal;
@@ -20,7 +20,7 @@
   width: 331px;
   height: 50px;
   left: 23px;
-  top: 333px;
+  top: 400px;
 
   background: #ffffff;
   border: 1px solid rgba(39, 46, 93, 0.1);
@@ -32,7 +32,7 @@
 .email {
   height: 16px;
   left: -140px;
-  top: 398px;
+  top: 450px;
 
   font-family: Metropolis;
   font-style: normal;
@@ -51,7 +51,7 @@
   width: 331px;
   height: 50px;
   left: 23px;
-  top: 428px;
+  top: 470px;
 
   background: #ffffff;
   border: 1px solid rgba(39, 46, 93, 0.1);
@@ -63,7 +63,7 @@
 .mobile_number {
   height: 16px;
   left: -110px;
-  top: 493px;
+  top: 525px;
 
   font-family: Metropolis;
   font-style: normal;
@@ -82,7 +82,7 @@
   width: 331px;
   height: 50px;
   left: 23px;
-  top: 523px;
+  top: 550px;
 
   background: #ffffff;
   border: 1px solid rgba(39, 46, 93, 0.1);
@@ -102,28 +102,8 @@
   transform: translateY(-50%);
 }
 
-.image-area {
-  border: 2px dashed rgba(255, 255, 255, 0.7);
-  padding: 1rem;
-  position: relative;
-}
-
-.image-area::before {
-  content: "Uploaded image result";
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 0.8rem;
-  z-index: 1;
-}
-
-.image-area img {
-  z-index: 2;
-  position: relative;
+.input-group {
+  background-color: #98cbec !important;
 }
 
 .logout_button {
@@ -131,10 +111,34 @@
   width: 131px;
   height: 50px;
   left: 23px;
-  top: 623px;
-  background: #ffffff;
+  top: 723px;
+  background: #e9e6e6;
   border: 1px solid rgba(39, 46, 93, 0.1);
   box-sizing: border-box;
   box-shadow: 0px 5px 20px rgb(60 134 221 / 15%);
   border-radius: 5px;
+}
+
+.profile-pic {
+  max-width: 200px;
+  max-height: 200px;
+  display: block;
+}
+
+.update_button {
+  position: absolute;
+  width: 131px;
+  height: 50px;
+  left: 23px;
+  top: 623px;
+  background: #e9e6e6;
+  border: 1px solid rgba(39, 46, 93, 0.1);
+  box-sizing: border-box;
+  box-shadow: 0px 5px 20px rgb(60 134 221 / 15%);
+  border-radius: 5px;
+}
+
+.py-4 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 30.5rem !important;
 }
