--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -58,12 +58,12 @@
 
 
 
-  <img src="{{baseUrl}}{{image}}" class="image_poi">
+  <img *ngIf="checkdata" src="{{baseUrl}}{{image}} " class="image_poi">
 
   <ion-content>
     <!-- display button -->
     <ion-button class="button_info" >Info</ion-button>
-    <ion-button class="button_history" (click)="buttonHistory(id)">History</ion-button>
+    <ion-button class="button_history" (click)="buttonHistory(id)" *ngIf="checkdata">History</ion-button>
 
     <!-- display data -->
     <div *ngIf="checkdata">
@@ -72,24 +72,28 @@
 
       <div *ngFor="let data of fields;" class="fields">{{data.key}} => {{data.value}}</div>
 
-      <div class="event">Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod</div>
+      <div class="event">{{data.event}} happen on {{data.event_date}}</div>
 
       <div class="coordinate">
         <ion-input  type="text" name="longitude" class="longitude" value="{{data.poi_longitude}}" disabled></ion-input>
         <ion-input  type="text" name="latitude" class="latitude" value="{{data.poi_latitude}}" disabled></ion-input>
       </div>
    
-      <div>
-        <ion-button (click)="buttonEdit()" class="button_edit">
-          Edit
-        </ion-button>
-        
-        <ion-button (click)="buttonReport(id)" class="button_report">
-          Report 
-        </ion-button>
-      </div>
-  
+    </div>
 
+    <div id="map" style="width: 100%; height: 50%">
+    </div>
+    
+    <div *ngIf="nodata" class="no-data">Sorry no information</div>
+
+    <div>
+      <ion-button (click)="buttonEdit()" class="button_edit">
+        Edit
+      </ion-button>
+      
+      <ion-button *ngIf="checkdata" (click)="buttonReport(id)" class="button_report">
+        Report 
+      </ion-button>
     </div>
 
   </ion-content>
