Fix css for each page

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -42,5 +42,5 @@
     <!-- <ion-button type="submit" expand="full" color="danger">Register</ion-button> -->
   </form>
   <p text-center>Already have a account?</p>
-  <ion-button expand="full" color="primary" (click)="loginModal()">Login</ion-button>
+  <ion-button expand="full" color="primary" (click)="login()">Login</ion-button>
 </ion-content>  
