Badge claim feature

--- a/src/app/dashboard/badgeDisplayModal/badge1/badge1.page.html
+++ b/src/app/dashboard/badgeDisplayModal/badge1/badge1.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <form [formGroup]="borderForm" (ngSubmit)="save()">
     <ion-list >
-      <ion-radio-group value="badge1" [formControl]="borderForm.controls['borderChosen']">
+      <ion-radio-group value="badge1" [formControl]="borderForm.controls['borderChosen1']">
 
         <ion-item class="badge1" >
           <ion-img class="loginImage" src="assets/badges/login.png"></ion-img>
