--- a/src/app/dashboard/badges/badges.page.html
+++ b/src/app/dashboard/badges/badges.page.html
@@ -32,6 +32,7 @@
                     <h2>Login (1) time</h2>
                   </ion-badge>
                 </ion-card-subtitle>
+                <ion-button disabled={{buttonClaimedLogin1}} class="claimModal" color="light" (click)="toClaimLoginModal1()">Claim</ion-button>
               </ion-col>
               <ion-col size="4">
                 <ion-img class="loginImage" src="assets/badges/login.png"></ion-img>
@@ -54,6 +55,7 @@
                     <h2>Login (7) times</h2>
                   </ion-badge>
                 </ion-card-subtitle>
+                <ion-button disabled={{buttonClaimedLogin2}} class="claimModal" color="light" (click)="toClaimLoginModal2()">Claim</ion-button>
               </ion-col>
               <ion-col size="4">
                 <ion-img class="loginImage" src="assets/badges/login.png"></ion-img>
@@ -78,6 +80,7 @@
                     <h2>Login (30) times</h2>
                   </ion-badge>
                 </ion-card-subtitle>
+                <ion-button disabled={{buttonClaimedLogin3}} class="claimModal" color="light" (click)="toClaimLoginModal3()">Claim</ion-button>
               </ion-col>
               <ion-col size="4">
                 <ion-img class="loginImage" src="assets/badges/login.png"></ion-img>
@@ -100,6 +103,7 @@
                     <h2>Login (90) times</h2>
                   </ion-badge>
                 </ion-card-subtitle>
+                <ion-button disabled={{buttonClaimedLogin4}} class="claimModal" color="light" (click)="toClaimLoginModal4()">Claim</ion-button>
               </ion-col>
               <ion-col size="4">
                 <ion-img class="loginImage" src="assets/badges/login.png"></ion-img>
@@ -138,6 +142,7 @@
                   <h2>Edit POI (1) time</h2>
                 </ion-badge>
               </ion-card-subtitle>
+              <ion-button disabled={{buttonClaimedCont1}} class="claimModal" color="light" (click)="toClaimContModal1()">Claim</ion-button>
             </ion-col>
             <ion-col size="4">
               <ion-img class="contributionImage" src="assets/badges/contribution.png"></ion-img>
@@ -160,6 +165,7 @@
                   <h2>Edit POI (20) times</h2>
                 </ion-badge>
               </ion-card-subtitle>
+              <ion-button disabled={{buttonClaimedCont2}} class="claimModal" color="light" (click)="toClaimContModal2()">Claim</ion-button>
             </ion-col>
             <ion-col size="4">
               <ion-img class="contributionImage" src="assets/badges/contribution.png"></ion-img>
@@ -184,6 +190,7 @@
                   <h2>Edit POI (60) times</h2>
                 </ion-badge>
               </ion-card-subtitle>
+              <ion-button disabled={{buttonClaimedCont3}} class="claimModal" color="light" (click)="toClaimContModal3()">Claim</ion-button>
             </ion-col>
             <ion-col size="4">
               <ion-img class="contributionImage" src="assets/badges/contribution.png"></ion-img>
@@ -206,6 +213,7 @@
                   <h2>Edit POI (100) times</h2>
                 </ion-badge>
               </ion-card-subtitle>
+              <ion-button disabled={{buttonClaimedCont4}} class="claimModal" color="light" (click)="toClaimContModal4()">Claim</ion-button>
             </ion-col>
             <ion-col size="4">
               <ion-img  class="contributionImage" src="assets/badges/contribution.png"></ion-img>
