--- a/src/app/dashboard/badgeDisplayModal/badge1/badge1.page.scss
+++ b/src/app/dashboard/badgeDisplayModal/badge1/badge1.page.scss
@@ -15,6 +15,6 @@
 
 ion-radio {
   height: 200px;
-  // --color: transparent;
-  // --color-checked: transparent;
+  --color: transparent;
+  --color-checked: transparent;
 }
