--- a/src/app/dashboard/badges/badges.page.scss
+++ b/src/app/dashboard/badges/badges.page.scss
@@ -76,3 +76,10 @@ ion-content {
 .cardSub {
   height: 35px;
 }
+
+.claimModal {
+  z-index: 3;
+  position: absolute;
+  bottom: 6px;
+  left: 200px;
+}
