--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -16,11 +16,15 @@
         </ion-col>
         <ion-card class="profileCard">
           <ion-card-content>
-            <ion-col >
+            <ion-col>
               <ion-img class="pictureProfile" src="assets/badges/contribution.png"></ion-img>
-              <ion-img class="pictureBorder" src="assets/border/pinkBorder.png"></ion-img>
+              <div [ngSwitch]="currentborder">
+                <ion-img *ngSwitchCase="'badge1'" class="pictureBorder" src="assets/border/pinkBorder.png"></ion-img>
+                <ion-img *ngSwitchCase="'badge2'" class="pictureBorder1" src="assets/border/glowBorder.png"></ion-img>
+              </div>
+              <!-- <ion-img class="pictureBorder" src="assets/border/pinkBorder.png"></ion-img> -->
 
-              <ion-button class="changeBorder" primary large>
+              <ion-button class="changeBorder" primary large (click)="toBorderModal()">
                 <ion-icon name="repeat-outline"></ion-icon>
                 <ion-label>Change border</ion-label>
               </ion-button>
@@ -36,7 +40,7 @@
   <ion-row>
     <ion-col></ion-col>
     <ion-col>
-      <ion-card>
+      <ion-card class="subDashboard">
         <ion-card-header>
           <ion-card-title color="primary">
           Total Points Gained
@@ -47,7 +51,7 @@
     </ion-col>
 
     <ion-col>
-      <ion-card>
+      <ion-card class="subDashboard">
         <ion-card-header>
           <ion-card-title color="primary">
             Badges Received
@@ -60,33 +64,58 @@
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
-
+  <br>
   <ion-title>Badge Display</ion-title>
+  <br>
   <ion-row>
     <ion-col>
-      <ion-card>
-        <ion-card-content>
-            <ion-button block (click)="badgeModal1()">
-              Choose Your Badge
-            </ion-button>
+      <ion-card class="displayBadge">
+        <ion-card-content class="badge1">
+          <ion-img *ngIf="currentbadge1" class="loginImage" src="assets/badges/login.png"></ion-img>
+          <div [ngSwitch]="currentbadge1">
+            <ion-img *ngSwitchCase="'badge1'" class="loginImageBorder" src="assets/badges/border1.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge2'" class="loginImageBorder" src="assets/badges/border2.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge3'" class="loginImageBorder" src="assets/badges/border3.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge4'" class="loginImageBorder" src="assets/badges/border4.png"></ion-img>
+          </div>
+          <h1 *ngIf="!currentbadge1">No Badges Selected</h1>
+          <ion-button class="loginImageButton" block (click)="badgeModal1()">
+            Choose Your Badge
+          </ion-button>
         </ion-card-content>
       </ion-card>
     </ion-col>
     <ion-col>
-      <ion-card>
-        <ion-card-content>
-            <ion-button block (click)="badgeModal1()">
-              Choose Your Badge
-            </ion-button>
+      <ion-card class="displayBadge">
+        <ion-card-content class="badge1">
+          <ion-img *ngIf="currentbadge2" class="loginImage" src="assets/badges/login.png"></ion-img>
+          <div [ngSwitch]="currentbadge2">
+            <ion-img *ngSwitchCase="'badge1'" class="loginImageBorder" src="assets/badges/border1.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge2'" class="loginImageBorder" src="assets/badges/border2.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge3'" class="loginImageBorder" src="assets/badges/border3.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge4'" class="loginImageBorder" src="assets/badges/border4.png"></ion-img>
+          </div>
+          <h1 *ngIf="!currentbadge2">No Badges Selected</h1>
+          <ion-button class="loginImageButton" block (click)="badgeModal2()">
+            Choose Your Badge
+          </ion-button>
         </ion-card-content>
       </ion-card>
     </ion-col>
     <ion-col>
-      <ion-card>
-        <ion-card-content>
-            <ion-button block (click)="badgeModal1()">
-              Choose Your Badge
-            </ion-button>
+      <ion-card class="displayBadge">
+        <ion-card-content class="badge1">
+          <ion-img *ngIf="currentbadge3" class="loginImage" src="assets/badges/login.png"></ion-img>
+          <div [ngSwitch]="currentbadge3">
+            <ion-img *ngSwitchCase="'badge1'" class="loginImageBorder" src="assets/badges/border1.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge2'" class="loginImageBorder" src="assets/badges/border2.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge3'" class="loginImageBorder" src="assets/badges/border3.png"></ion-img>
+            <ion-img *ngSwitchCase="'badge4'" class="loginImageBorder" src="assets/badges/border4.png"></ion-img>
+          </div>
+          <h1 *ngIf="!currentbadge3">No Badges Selected</h1>
+          <ion-button class="loginImageButton" block (click)="badgeModal3()">
+            Choose Your Badge
+          </ion-button>
         </ion-card-content>
       </ion-card>
     </ion-col>
