--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content fullscreen>
-<!-- profile card -->
+<!-- profile cards -->
   <ion-row>
     <ion-col>
       <ion-row>
