Add upload image and alert message

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -123,6 +123,8 @@
   max-width: 200px;
   max-height: 200px;
   display: block;
+  border-radius: 900px 900px;
+  margin-left: 100px;
 }
 
 .update_button {
