--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -9,56 +9,8 @@
   </ion-toolbar>
 </ion-header>
 
-<!-- <ion-content [fullscreen]="true">
- 
-    <ion-item>
-      <ion-icon name="business"></ion-icon>
-      <ion-label>Place detail </ion-label>
-      <ion-button fill="outline" slot="end" (click)="buttonHistory(id)">View history</ion-button>
-    </ion-item>
 
-    <div *ngIf="checkdata">
-      <ion-badge color="secondary">Id</ion-badge>
-      <div>{{data.id}}</div>
-      <ion-badge color="secondary">Name</ion-badge>
-      <div>{{data.name}}</div>
-      <ion-badge color="secondary">Fields</ion-badge>
-      <div *ngFor="let data of fields;">{{data.key}} => {{data.value}}</div>
-      <ion-badge color="secondary">Latitude</ion-badge>
-      <div>{{data.poi_latitude}}</div>
-      <ion-badge color="secondary">Longitude</ion-badge>
-      <div>{{data.poi_longitude}}</div>
-      <ion-badge color="secondary">Image Poi</ion-badge>
-      <img src="{{baseUrl}}{{image}}"  width="500" height="600">
-    </div>
-
-    <br>
-    <br>
-    <div id="map" style="width: 100%; height: 50%">
-    </div>
-    
-  
-    <br>
-    <br>
-  
-    <div class="button">
-      <ion-button (click)="buttonEdit()" class="button-edit">
-        <ion-icon slot="start" ></ion-icon>
-        Edit Place
-      </ion-button>
-      
-      <ion-button (click)="buttonReport(id)" class="button-report">
-        <ion-icon slot="end" ></ion-icon>
-        Report Place
-      </ion-button>
-    </div>
-
-</ion-content> -->
-
-
-
-
-  <img *ngIf="checkdata" src="{{baseUrl}}{{image}} " class="image_poi">
+  <img *ngIf="checkdata && image" src="{{baseUrl}}{{image}} " class="image_poi">
 
   <ion-content>
     <!-- display button -->
@@ -70,18 +22,43 @@
       
       <div class="name">{{data.name}}</div>
 
-      <div *ngFor="let data of fields;" class="fields">{{data.key}} => {{data.value}}</div>
-
-      <div class="event">{{data.event}} happen on {{data.event_date}}</div>
-
-      <div class="coordinate">
+      <!-- <div *ngFor="let data of fields;" class="fields">{{data.key}} => {{data.value}}</div> -->
+      <table  class="table fields">
+        <thead>
+          <tr>
+            <th >Key</th>
+            <th >Information</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of fields;" >
+            <td>{{data.key ? data.key : "No info"}}</td>
+            <td>{{data.value ? data.value : "No info" }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- <div class="event">{{data.event}} happen on {{data.event_date}}</div> -->
+      <div class="card"  *ngIf="checkdata && data.event" >
+        Event happening : 
+        <div class="card-body">
+          {{data.event}} happen on {{data.event_date}}
+        </div>
+      </div>
+      <div class="coordinate"> Coordinate
         <ion-input  type="text" name="longitude" class="longitude" value="{{data.poi_longitude}}" disabled></ion-input>
         <ion-input  type="text" name="latitude" class="latitude" value="{{data.poi_latitude}}" disabled></ion-input>
       </div>
    
     </div>
 
-    <div id="map" style="width: 100%; height: 50%">
+    <div id="map" 
+    style="
+    width: 70%;
+    height: 50%;
+    position: relative;
+    margin: 50px;
+    top: -250px;
+    outline: none;">
     </div>
     
     <div *ngIf="nodata" class="no-data">Sorry no information</div>
